<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewmodel"
      type="com.logic.mine.my_message.MyMessageViewModel" />
  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <com.logic.mine.SettingsItem
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="@{() -> viewmodel.navToGroupMessage()}"
      app:des="安琪拉邀请你加入团"
      app:text="@string/group_msg" />

    <com.logic.mine.SettingsItem
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="@{() -> viewmodel.navToFriendMessage()}"
      app:des="安琪拉邀请你加入团"
      app:text="@string/friend_msg" />


    <com.logic.mine.SettingsItem
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="@{() -> viewmodel.navToNotificationMessage()}"
      app:des="安琪拉邀请你加入团"
      app:text="@string/notification_msg" />

  </LinearLayout>
</layout>