<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewmodel"
      type="com.logic.mine.MineViewModel" />
  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:contentDescription="@null"
      app:srcCompat="@mipmap/mine_activity_icon" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:text="疯狂的石头" />

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:orientation="horizontal">

      <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:singleLine="true"
        android:text="深圳" />

      <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:text="LV3" />

    </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="6dp"
      android:layout_marginTop="12dp"
      android:background="@color/grey_300" />

    <com.logic.mine.SettingsItem
      android:onClick="@{() -> viewmodel.navigateToRecord()}"
      android:id="@+id/record"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:des="最近的公里数"
      app:icon_src="@mipmap/mine_icon"
      app:text="@string/my_sport" />

    <com.logic.mine.SettingsItem
      android:onClick="@{() -> viewmodel.navigateToEvent()}"
      android:id="@+id/event"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:icon_src="@mipmap/mine_icon"
      app:text="@string/my_event" />

    <com.logic.mine.SettingsItem
      android:onClick="@{() -> viewmodel.navigateToFollowing()}"
      android:id="@+id/following"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:icon_src="@mipmap/mine_icon"
      app:text="@string/my_following" />

    <com.logic.mine.SettingsItem
      android:onClick="@{() -> viewmodel.navigateToMyMessage()}"
      android:id="@+id/message"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:icon_src="@mipmap/mine_icon"
      app:text="@string/my_message" />

    <View
      android:layout_width="match_parent"
      android:layout_height="6dp"
      android:background="@color/grey_300" />

    <com.logic.mine.SettingsItem
      android:id="@+id/settings"
      android:onClick="@{() -> viewmodel.navigateToSettings()}"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:icon_src="@mipmap/mine_icon"
      app:text="@string/setting" />

  </LinearLayout>
</layout>