<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewmodel"
      type="com.logic.mine.settings.SettingsViewModel" />
  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <com.logic.mine.SettingsItem
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="@{() -> viewmodel.navToChangePhoneNumber()}"
      app:icon_src="@mipmap/mine_icon"
      app:text="@string/change_phone_number"
      app:text_color="@color/grey_700"
      app:text_gravity_end="true" />

    <com.logic.mine.SettingsItem
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="@{() -> viewmodel.navToFeedback()}"
      app:text="@string/feedback"
      app:text_color="@color/grey_700" />

    <com.logic.mine.SettingsItem
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="@{() -> viewmodel.navToAboutUs()}"
      app:text="@string/about_us"
      app:text_color="@color/grey_700" />

    <LinearLayout
      android:id="@+id/container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/mine_border_bottom_1dp"
      android:gravity="center_vertical"
      android:orientation="horizontal">

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_weight="1"
        android:text="推送通知"
        android:textColor="@color/grey_1000"
        android:textSize="15sp" />

      <androidx.appcompat.widget.SwitchCompat
        android:checked="@={viewmodel.pushNotification}"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="12dp" />
    </LinearLayout>


  </LinearLayout>
</layout>